<resources>

    <!-- Nom de l'aplicació -->
    <string name="app_name">Montserrat Express</string>

    <!-- Splash -->
    <string name="splashTitolU">MONTSERRAT</string>
    <string name="splashTitolDos">EXPRESS</string>

    <!-- Login -->
    <string name="loginTituloUn">MONTSERRAT</string>
    <string name="loginTituloDos">EXPRESS</string>
    <string name="loginCorreu">CORREU</string>
    <string name="loginContrasenya">CONTRASENYA</string>
    <string name="loginBotoInciarSessió">INICIAR SESSIÓ</string>
    <string name="loginTextContrasenya">Has oblidat la contrasenta?</string>
    <string name="loginTextRegistre">Encara no tens compte?</string>
    <string name="loginRegistre">Crea</string>

    <!-- Registre -->
    <string name="registreTitulUn">CREA EL TEU</string>
    <string name="registreTitulDos">USUARI</string>
    <string name="registreNom">NOM</string>
    <string name="registreEdat">EDAT</string>
    <string name="registreCorreu">CORREU</string>
    <string name="registreContraseña">CONTRASENYA</string>
    <string name="registreBoto">CREAR</string>


    <!-- Menu -->
    <string name="menuNom">NOM USUARI</string>
    <string name="menuInici">INICI</string>
    <string name="menuTransport">TRANSPORT</string>
    <string name="menuTren">TREN</string>
    <string name="menuAeri">AERI</string>
    <string name="menuFunicularSantJoan">FUNICULAR SANT JOAN</string>
    <string name="menuFunicularSantaCova">FUNICULAR SANTA COVA</string>
    <string name="menuRutes">RUTES</string>
    <string name="menuNosaltres">NOSALTRES</string>
    <string name="menuIdioma">RESERVA</string>
    <string name="menuTancarSessio">TANCAR SESSIÓ</string>

    <!-- Rutes -->
    <string name="rutesTítol">RUTES DE SENDERISME</string>
    <string name="rutesAvis">  </string>

    <!-- Inici -->
    <string name="iniciTitol">INICI</string>
    <string name="iniciAvis">  </string>
    <string name="iniciReserves">Reserves</string>
    <string name="iniciIcon"></string>
    <string name="iniciTipus">ASSOLELLAT</string>
    <string name="iniciTemp">20ºC</string>
    <string name="iniciAvui">21/05/2024</string>
    <string name="iniciReserveTitol">Caminada general</string>
    <string name="iniciReservaData">21/05/2024</string>
    <string name="iniciReserveDescripcio">Descripció</string>
    <string name="iniciNovetats">Novetats</string>
    <string name="iniciNoTitol">Esolanía de Montserrat</string>
    <string name="iniciNoData">21/05/2024</string>
    <string name="iniciBotoInici">Inici</string>
    <string name="iniciBotoTransport">Transport</string>

    <!-- Transport -->
    <string name="transportTitol">TRANSPORT</string>
    <string name="transportAeri">Aeri de Montserrat</string>
    <string name="transportCremallera">Cremallera de Montserrat</string>
    <string name="transportFuniculars">Funiculars</string>
    <string name="transportSant">Sant Joan</string>
    <string name="transportCova">Santa Cova</string>
    <string name="transportBotoInici">Inici</string>
    <string name="transportBotoTransport">Transport</string>

    <!-- Cremallera -->
    <string name="cremalleraTitol">CREMALLERA DE MONTSERRAT</string>
    <string name="cremalleraHorari">Horaris de Cremallera</string>
    <string name="cremalleraOrigen">Origen</string>
    <string name="cremalleraDesti">Destí</string>
    <string name="cremalleraData">Data</string>
    <string name="cremmalleraMonistrol">Monistrol de Montserrat</string>
    <string name="cremmalleraMonistrolDos">Monistrol Villa</string>
    <string name="cremmalleraMontserrat">Montserrat</string>
    <string name="cremalleraBotoBuscar">Buscar</string>
    <string name="cremalleraResultat">Resultats de la cerca</string>
    <string name="cremalleraDataDos">DATA</string>
    <string name="cremalleraComprar">Compra els bitllets online</string>
    <string name="cremalleraBillets">Billets del Cremallera</string>
    <string name="cremalleraAnada">Anada</string>
    <string name="cremalleraAnadaTornada">Anada i Tornada</string>
    <string name="cremalleraPreusBitllets">Preus Bitllets Cremallera de montserrat</string>
    <string name="cremalleraMDMM">Monistrol de Montserrat / Monistrol Vila</string>
    <string name="cremalleraMM">Monistrol Vila / Montserrat</string>
    <string name="cremalleraAdult">Adult (14 - 64 anys)</string>
    <string name="cremalleraInfaltil">Infantil (4 - 13 anys)</string>
    <string name="cremalleraMenor">Menor (fins a 3 anys)</string>
    <string name="cremalleraGratis">Gratuït</string>
    <string name="cremalleraBotoInici">Inici</string>
    <string name="cremalleraBotoTransport">Transport</string>


    <!-- Aeri -->
    <string name="aeriTitol">AERI DE MONTSERRAT</string>
    <string name="aeriCalendari">Calendari 2024</string>
    <string name="aeriGener">GENER</string>
    <string name="aeriFebrer">FEBRER</string>
    <string name="aeriMarç">MARÇ</string>
    <string name="aeriAbril">ABRIL</string>
    <string name="aeriMaig">MAIG</string>
    <string name="aeriJuny">JUNY</string>
    <string name="aeriJuliol">JULIOL</string>
    <string name="aeriAgost">AGOST</string>
    <string name="aeriSetembre">SETEMBRE</string>
    <string name="aeriOctubre">OCTUBRE</string>
    <string name="aeriNovembre">NOVEMBRE</string>
    <string name="aeriDesembre">DESEMBRE</string>
    <string name="aeriTarifes">Tarifes</string>
    <string name="aeriInfo">Més informació</string>
    <string name="aeriPreus">Preus Bitllets</string>
    <string name="aeriAnada">Anada</string>
    <string name="aeriAnadaTornada">Anada i tornada</string>

    <!-- Funicular -->
    <string name="funicularTitolJoan">FUNICULAR SANT JOAN</string>
    <string name="funicularTitolCova">FUNICULAR SANTA COVA</string>

    <!-- Novetats -->
    <string name="novetatsTitol">NOVETATS</string>
    <string name="novetatsEscolanía">Escolanía de Montserrat</string>
    <string name="novetatsReservarActivitat">Reservar Activitat</string>
    <string name="novetatsSantuari">Santuari de Montserrat</string>
    <string name="novetatsAmics">Amics de Montserrat</string>

    <!-- Novetats Info-->
    <string name="novetatsConsulta">Consulta la resta activitats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_insertar_datos">InsertarDatos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- NOSALTRES -->
    <string name="nosoltresTitol">NOSALTRES</string>
    <string name="nosoltresText">Us donem la benvinguda a Montserrat Express. Som Nil Medrano i Nasera Boulehoual, estudiants del institut, i els creadors daquesta aplicació.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>