<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F574F"
    tools:context=".models.models.Inici_De_Sessio">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iniciImatge"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/loginTituloUn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:srcCompat="@drawable/menulogo" />

        <TextView
            android:id="@+id/loginTituloUn"
            android:layout_width="326dp"
            android:layout_height="52dp"
            android:layout_marginTop="72dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/loginTituloUn"
            android:textColor="@color/white"
            android:textSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loginTituloDos"
            android:layout_width="192dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/loginTituloDos"
            android:textAllCaps="true"
            android:textColor="#ffdd00"
            android:textSize="45dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTituloUn" />

        <EditText
            android:id="@+id/loginCorreu"
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/entrada_groga"
            android:drawableLeft="@drawable/icon_user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/loginCorreu"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="40dp"
            android:textColor="#ffdd00"
            android:textColorHint="#ffdd00"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imatgeInici" />

        <TextView
            android:id="@+id/loginTextContrasenya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/loginTextContrasenya"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBotoInciarSessió" />

        <TextView
            android:id="@+id/loginTextRegistre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/loginTextRegistre"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextContrasenya"
            app:layout_constraintVertical_bias="0.219" />

        <EditText
            android:id="@+id/loginContrasenya"
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/entrada_groga"
            android:drawableLeft="@drawable/icon_pass"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/loginContrasenya"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="50dp"
            android:textColor="#ffdd00"
            android:textColorHint="#ffdd00"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginCorreu" />


        <Button
            android:id="@+id/loginBotoInciarSessió"
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/boto_blanc"
            android:text="@string/loginBotoInciarSessió"
            android:textColor="#5F574F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginContrasenya" />

        <TextView
            android:id="@+id/loginRegistre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginRegistre"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toEndOf="@+id/loginTextRegistre"
            app:layout_constraintTop_toBottomOf="@+id/loginTextContrasenya"
            app:layout_constraintVertical_bias="0.219" />

        <ImageView
            android:id="@+id/imatgeInici"
            android:layout_width="867dp"
            android:layout_height="322dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTituloDos"
            app:srcCompat="@drawable/aerilogo3" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>